force-app/main/default/objects/JHJX__SvcDictInfo__c/JHJX__SvcDictInfo__c.object-meta.xml
<CustomObject>
    <description>JXChange Service Dictonary Information</description>
    <label>SvcDictInfo</label>
    <nameField>
        <displayFormat>JX-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SvcDictInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>