force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__Business_Operation__c.field-meta.xml
<CustomField>
    <fullName>JHJX__Business_Operation__c</fullName>
    <label>Business Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>