force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__default__c.field-meta.xml
<CustomField>
    <fullName>JHJX__default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default value</label>
    <type>Checkbox</type>
</CustomField>