force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__ElemName__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ElemName__c</fullName>
    <label>Element Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>