force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__ElemValDesc__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ElemValDesc__c</fullName>
    <label>Element Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>