force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__ElemValDetail__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ElemValDetail__c</fullName>
    <label>Element Value Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>