force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__ElemValTxt__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ElemValTxt__c</fullName>
    <label>Value Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>