force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__hide__c.field-meta.xml
<CustomField>
    <fullName>JHJX__hide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Element from displaying in UI</label>
    <type>Checkbox</type>
</CustomField>