force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__IncludeAccountFlow__c.field-meta.xml
<CustomField>
    <fullName>JHJX__IncludeAccountFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include record in AccountBooking Flow</label>
    <type>Checkbox</type>
</CustomField>