force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__Title__c.field-meta.xml
<CustomField>
    <fullName>JHJX__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>