force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__uid__c.field-meta.xml
<CustomField>
    <fullName>JHJX__uid__c</fullName>
    <externalId>true</externalId>
    <label>UID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>