force-app/main/default/objects/JHJX__SvcDictInfo__c/fields/JHJX__UserDefField__c.field-meta.xml
<CustomField>
    <fullName>JHJX__UserDefField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Defined Field Usage</label>
    <type>Checkbox</type>
</CustomField>